<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="basiccalc.myapp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/log_out"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        app:showAsAction="never"/>
</menu>
