<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="basiccalc.myapp.Register">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:text="@string/reg_form"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_username"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/username"
                android:ems="10"
                android:hint="@string/hint_username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_Email_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/Email"
                android:ems="10"
                android:hint="@string/hint_email"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_password_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/Password"
                android:ems="10"
                android:hint="@string/hint_password"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up"
            android:text="@string/sign_up"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_in"
            android:text="@string/log_in_back"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"/>

</LinearLayout>

