<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="basiccalc.myapp.Login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/login_form"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="@color/colorPrimaryDark"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_Email_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/Email"
                android:ems="10"
                android:hint="@string/hint_email"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_password_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/Password"
                android:ems="10"
                android:hint="@string/hint_password"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_in"
            android:text="@string/log_in"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:text="or"
            android:id="@+id/sign_up_or_sign_in"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up"
            android:text="@string/sign_up"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"/>

</LinearLayout>
